--- a/codeseeker/config.ini
+++ b/codeseeker/config.ini
@@ -1,5 +1,5 @@
 [DEFAULT]
 language = python
-base_url = https://api.github.com/search/code?q=
+base_url = https://api.github.com/search/code
 github_url = https://github.com/
 repo = AyudaEnPython/Soluciones
